--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mqtt": "^2.0.1"
+    "mqtt": "^2.0.1",
+    "blinktjs": "^0.8.1"
   }
 }
